fix letterspacing

--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@
 /* Global Classes */ 
 
 .title-text{
-    font: normal bold 50px/ 72px var(--poppins);
+    font: normal bold 50px/ 35px var(--poppins);
 }
 
 .text-uppercase{
